--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -32,6 +32,7 @@
 
 <div class="panel panel-default" style="height:100%;background-color:rgba(222,222,222,0.8)">
     <div class="panel-heading" align="center">秒杀商品详情</div>
+    <div class="panel-heading" align="center">【注】本网站只做学习之用！！！并非真实商城</div>
     <div class="panel-body">
         <span id="userTip"> 您还没有登录，请登陆后再操作<br/></span>
         <span id="userLogin"></span><br>
@@ -60,8 +61,7 @@
             <td>
                 <div class="row">
                     <div class="form-inline">
-                        <img height="32" id="verifyCodeImg" onclick="refreshVerifyCode()" style="display:none"
-                             width="80"/>
+                        <img height="32" id="verifyCodeImg" onclick="refreshVerifyCode()" style="display:none" width="120"/>
                         <input class="form-control" id="verifyCode" style="display:none"/>
                         <button class="btn btn-primary" id="buyButton" onclick="getSeckillPath()" type="button">立即秒杀
                         </button>
@@ -174,6 +174,7 @@
         var remainSeconds = detail.remainSeconds;
         var goods = detail.goods;
         var user = detail.user;
+        var stockCountVal = goods.stockCount;
         if (user) {
             $("#userTip").hide();
             $("#userLogin").text("用户名："+user.nickname);
@@ -190,7 +191,15 @@
         $("#goodsPrice").text(goods.goodsPrice);
         $("#seckillPrice").text(goods.seckillPrice);
         $("#stockCount").text(goods.stockCount);
-        countDown();
+        if(stockCountVal>0){
+            countDown();
+        }
+        else{
+            $("#buyButton").attr("disabled", true);
+            $("#seckillTip").html("秒杀已经结束");
+            $("#verifyCodeImg").hide();
+            $("#verifyCode").hide();
+        }
     }
 
     $(function () {
